<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/registertruckbtnContainer"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:text="ABOUT YOU"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:maxLines="1"

                android:singleLine="true"
                android:textAllCaps="true" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_names"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_names"
                android:inputType="textEmailAddress|textAutoComplete"
                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="TRUCK INFORMATION"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_licence"
                android:inputType="text"
                android:maxLines="1"

                android:singleLine="true"
                android:textAllCaps="true" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_station"
                android:inputType="text"
                android:maxLines="1"

                android:singleLine="true"
                android:textAllCaps="true" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_required_password"
                android:inputType="textPassword"
                android:maxLines="1"

                android:singleLine="true"
                android:textAllCaps="true" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_repeat_password"
                android:inputType="textPassword"

                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/registertruckbtnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorTransparentWhite"
        android:padding="8dp">

        <Button
            android:id="@+id/register_truck_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            android:text="REGISTER"

            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>