<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewRequest">

    <android.support.v7.widget.Toolbar
        android:id="@+id/request_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="PIT INFORMATION"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="PROVINCE"
                android:prompt="@string/spinner_title"
                android:textAllCaps="true"></Spinner>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="DISTRICT"
                android:prompt="@string/spinner_title"
                android:textAllCaps="true"></Spinner>

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_street"
                android:inputType="textPassword"
                android:maxLines="1"

                android:singleLine="true"
                android:textAllCaps="true" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_house_number"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/login_edit_text"
                    android:ems="10"
                    android:hint="@string/volume" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="OR"
                    android:textStyle="bold" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"

                    android:layout_marginLeft="8dp"
                    android:background="@drawable/login_edit_text"
                    android:ems="10"
                    android:hint="DISTRICT"
                    android:prompt="@string/spinner_title"
                    android:textAllCaps="true"></Spinner>

            </LinearLayout>


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Check to use GPS location" />


            <Button

                android:id="@+id/register_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="SEND"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>