<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/registerbtnContainer"
        android:paddingBottom="16dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:text="ABOUT YOU"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/client_phone_numbr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_phone"
                android:inputType="phone"

                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />


            <EditText
                android:id="@+id/client_full_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_names"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/client_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="someone@site...."
                android:inputType="textEmailAddress|textAutoComplete"
                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="PIT INFORMATION"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/client_province"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="PROVINCE"
                android:prompt="@string/spinner_title"
                android:textAllCaps="true"></Spinner>

            <Spinner
                android:id="@+id/client_district"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="DISTRICT"
                android:prompt="@string/spinner_title"
                android:textAllCaps="true"></Spinner>

            <Spinner
                android:id="@+id/client_sector"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="DISTRICT"
                android:prompt="@string/spinner_title"
                android:textAllCaps="true"></Spinner>

            <EditText

                android:id="@+id/client_cell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="CELL"
                android:inputType="text"

                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />

            <EditText

                android:id="@+id/client_village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="VILLAGE"
                android:inputType="text"

                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/client_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="STREET"
                android:inputType="text"

                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />

            <EditText

                android:id="@+id/client_house_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="@string/prompt_house_number"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textAllCaps="true" />

            <Spinner
                android:id="@+id/client_volume"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:ems="10"
                android:hint="DISTRICT"
                android:prompt="@string/spinner_title"
                android:textAllCaps="true"></Spinner>

            <EditText

                android:id="@+id/client_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:editable="false"
                android:ems="10"
                android:hint="start date"
                android:inputType="text"
                android:maxLines="1" />

            <EditText

                android:id="@+id/client_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_edit_text"
                android:editable="false"
                android:ems="10"
                android:hint="end date"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/login_edit_text"
                    android:ems="10"
                    android:hint="@string/volume"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="OR"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"

                    android:layout_marginLeft="8dp"
                    android:background="@drawable/login_edit_text"
                    android:ems="10"
                    android:hint="DISTRICT"
                    android:prompt="@string/spinner_title"
                    android:textAllCaps="true"></Spinner>

            </LinearLayout>


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Check to use GPS location"
                android:visibility="invisible" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/registerbtnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:padding="8dp">

        <Button

            android:id="@+id/register_btn"

            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:text="REGISTER" />
    </LinearLayout>
</RelativeLayout>